# svgpart

./: .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  Messages.sh  org.kde.svgpart.metainfo.xml  svgbrowserextension.cpp  svgbrowserextension.h  svgpart.cpp  svgpart.desktop  svgpart.h  svgpart.rc
po/ar/: svgpart.po
po/ast/: svgpart.po
po/be/: svgpart.po
po/bg/: svgpart.po
po/bs/: svgpart.po
po/ca/: svgpart.po
po/ca@valencia/: svgpart.po
po/cs/: svgpart.po
po/da/: svgpart.po
po/de/: svgpart.po
po/el/: svgpart.po
po/en_GB/: svgpart.po
po/eo/: svgpart.po
po/es/: svgpart.po
po/et/: svgpart.po
po/eu/: svgpart.po
po/fi/: svgpart.po
po/fr/: svgpart.po
po/ga/: svgpart.po
po/gl/: svgpart.po
po/he/: svgpart.po
po/hi/: svgpart.po
po/hr/: svgpart.po
po/hu/: svgpart.po
po/ia/: svgpart.po
po/id/: svgpart.po
po/ie/: svgpart.po
po/is/: svgpart.po
po/it/: svgpart.po
po/ja/: svgpart.po
po/ka/: svgpart.po
po/kk/: svgpart.po
po/km/: svgpart.po
po/ko/: svgpart.po
po/ku/: svgpart.po
po/lt/: svgpart.po
po/lv/: svgpart.po
po/mk/: svgpart.po
po/ml/: svgpart.po
po/mr/: svgpart.po
po/nb/: svgpart.po
po/nds/: svgpart.po
po/nl/: svgpart.po
po/nn/: svgpart.po
po/pa/: svgpart.po
po/pl/: svgpart.po
po/pt/: svgpart.po
po/pt_BR/: svgpart.po
po/ro/: svgpart.po
po/ru/: svgpart.po
po/sa/: svgpart.po
po/si/: svgpart.po
po/sk/: svgpart.po
po/sl/: svgpart.po
po/sq/: svgpart.po
po/sv/: svgpart.po
po/ta/: svgpart.po
po/th/: svgpart.po
po/tr/: svgpart.po
po/ug/: svgpart.po
po/uk/: svgpart.po
po/vi/: svgpart.po
po/wa/: svgpart.po
po/zh_CN/: svgpart.po
po/zh_TW/: svgpart.po
src/: CMakeLists.txt  Messages.sh  org.kde.svgpart.metainfo.xml  svgbrowserextension.cpp  svgbrowserextension.h  svgpart.cpp  svgpart.desktop  svgpart.desktop.in  svgpart.h  svgpart.json.in  svgpart.qrc  svgpart.rc  svgview.cpp  svgview.h
